<resources>
    <string name="app_name">AndroCalcul</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="multiplication">x</string>
    <string name="divise">/</string>
    <string name="fonctions">Fonctions</string>
    <string name="log">LOG</string>
    <string name="log10">LOG10</string>
    <string name="exp">EXP</string>
    <string name="equations">Equations</string>
    <string name="racine">Racine</string>
    <string name="_2">*2</string>
    <string name="_3">*3</string>
    <string name="valeur_de_b">Valeur de B</string>
    <string name="valider">Valider</string>
    <string name="valeur_de_a">Valeur de A</string>
    <string name="op_ration">Opération</string>
    <string name="equation">Equation</string>
    <string name="fonction">Fonction</string>
</resources>