<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="additionClick"
        android:text="@string/plus"
        android:textSize="40sp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:constraint_referenced_ids="guideline1"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="soustractionClick"
        android:text="@string/moins"
        android:textSize="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:constraint_referenced_ids="guideline1"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="multiplicationClick"
        android:text="@string/multiplication"
        android:textSize="40sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="divisionClick"
        android:text="@string/divise"
        android:textSize="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>